add useEffect to listen for throttledValue change

--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "react-typescript",
+  "name": "react-use-throttle",
   "version": "1.0.0",
-  "description": "React and TypeScript example starter project",
-  "keywords": [
-    "typescript",
-    "react",
-    "starter"
-  ],
+  "description": "",
+  "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
     "react": "17.0.2",
