--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "react-use-throttle",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "keywords": [],
-  "main": "src/index.tsx",
+  "main": "dist/index.umd.min.js",
+  "module": "dist/index.es.js",
+  "types": "dist/useThrottle.d.ts",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react": "17.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
     "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "rollup": "^2.44.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build": "rollup -c"
   },
   "browserslist": [
     ">0.2%",
