--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-throttle",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "keywords": [],
   "main": "dist/index.umd.min.js",
@@ -9,8 +9,8 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "react": "17.0.2"
+  "peerDependencies": {
+    "react": "^16.8.0  || ^17.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
