--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.0  || ^17.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/react": "17.0.0",
     "rollup": "^2.44.0",
